--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/socket.io-client": "^1.4.33",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
