--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
     "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "random-words": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/socket.io": "^2.1.11",
+    "@types/socket.io-client": "^1.4.33",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
