--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "ts-node server/index.ts"
   },
   "dependencies": {
+    "@monaco-editor/react": "^3.6.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -22,11 +23,11 @@
     "random-words": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
     "react-redux": "^7.2.1",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -37,6 +38,7 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "@types/react-monaco-editor": "^0.16.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io": "^2.1.11",
