--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment-duration-format": "^2.3.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "random-words": "^1.1.1",
@@ -34,6 +35,8 @@
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/moment": "^2.13.0",
+    "@types/moment-duration-format": "^2.2.2",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.38",
